fix benchmark