@@ -10,7 +10,7 @@ SCRIPT_DIR=$(cd "$(dirname "$0")";pwd)
 JAR_PATH=$SCRIPT_DIR/../target/catty-benchmark-0.1.0-jar-with-dependencies.jar
 
 JAVA_BIN=$(which java)
-nohup $JAVA_BIN -jar $JAR_PATH 2>&1 &
+nohup $JAVA_BIN -jar -XX:+PrintGCDetails $JAR_PATH 2>&1 &
 
 sleep 2
 
